adding a comic about gifs.

--- a/talk/themes/style/profesh.css
+++ b/talk/themes/style/profesh.css
@@ -306,3 +306,7 @@
 #cover_retina {
   background: url(../../img/cover_retina.png) no-repeat 0 0;
   background-size: cover; }
+
+#cat-gifs {
+  background: url(../../img/comic_gifs.jpg) no-repeat 0 0;
+  background-size: cover; }
