--- a/talk/themes/style/profesh.scss
+++ b/talk/themes/style/profesh.scss
@@ -450,3 +450,8 @@ h1, h2 {
 	background: url(../../img/cover_retina.png) no-repeat  0 0;
 	background-size: cover;
 }
+
+#cat-gifs {
+	background: url(../../img/comic_gifs.jpg) no-repeat  0 0;
+	background-size: cover;
+}
