--- a/talk/themes/style/profesh.css
+++ b/talk/themes/style/profesh.css
@@ -134,7 +134,7 @@
   .deck-container .slide_about img {
     margin-top: 1em; }
   .deck-container #thanks {
-    background: url(../../img/vienna.jpg) center center;
+    background: url(../../img/bg_csssummit.jpg) center center;
     background-size: cover; }
     .deck-container #thanks .vcenter {
       background: rgba(67, 18, 54, 0.5);
