--- a/talk/themes/style/profesh.scss
+++ b/talk/themes/style/profesh.scss
@@ -226,7 +226,7 @@ $grey: #4e6369;
 	img { margin-top: 1em}
 }
 #thanks {
-	background: url(../../img/vienna.jpg) center center;
+	background: url(../../img/bg_csssummit.jpg) center center;
 	background-size: cover;
 	.vcenter {
 		background: rgba($wonderland-purple, .5);
