--- a/book/scss/_variables.scss
+++ b/book/scss/_variables.scss
@@ -1,8 +1,7 @@
 // Variables
 
-
 // Max dimensions of iPad retina, the highest target device: 2048-by-1536
-$max-width : 2048;
+$max-width: 2048;
 $max-height: 1536;
 
 $min-width: 800;
@@ -10,9 +9,10 @@ $min-height: 600;
 
 // Media Queries and size ratios
 $breakpoint-short: (min-aspect-ratio "4/3"), (orientation landscape);
-$breakpoint-not-narrow: (525/16*1em);
-$breakpoint-narrow: (max-width 525/16*1em);
-$breakpoint-credits-pain: (min-aspect-ratio "4/3"), (orientation landscape), (718/16*1em);
+$breakpoint-not-narrow: (525/16 * 1em);
+$breakpoint-narrow: (max-width 525/16 * 1em);
+$breakpoint-credits-pain: (min-aspect-ratio "4/3"), (orientation landscape),
+    (718/16 * 1em);
 
 // saucer ratios
 $saucer-sizer: 32em;
