--- a/book/scss/scenes/park/_page-the-hole.scss
+++ b/book/scss/scenes/park/_page-the-hole.scss
@@ -1,89 +1,129 @@
 .page_the-hole {
-	.foreground {
-		height: 100%;
-		@include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
-		@include background-size(100% auto);
-		position: absolute;
-		bottom: 0; left: 0;
-		width: 100%;
-		z-index: 4;
-	}
-	.rabbit {
-		@include background(image-url("park5_rabbit.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		top: 15%; left: 60%;
-		width: percentage(300/$max-width); padding-top: percentage(635/$max-width);
-		@include opacity(0);
-		z-index: 3;
-		.cssanimations & { @include opacity(1);}
-	}
-	.background {
-		@include background(image-url("bg_park5_1.png") no-repeat);
-		@include background-size(100% auto);
-		position: absolute;
-		top: 0; left: 0;
-		width: 100%; height: 100%;
-		z-index: 2;
-	}
-	.bg-hole {
-		@include background(image-url("bg-hole.jpg") no-repeat);
-		@include background-size(100% auto);
-		position: absolute;
-		top: percentage(543/$max-height); left: percentage(996/$max-width);
-		width: percentage(757/$max-width); padding-top: percentage(227/$max-width);
-		z-index: 1;
-	}
-	&.in-view {
-		.bg-hole {
-			@include animation(hole-glow .35s steps(4) infinite alternate);
-		}
-		.rabbit {
-			@include animation(rabbit-down 3s forwards);
-		}
-	}
+    .foreground {
+        height: 100%;
+        @include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
+        @include background-size(100% auto);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 4;
+    }
+    .rabbit {
+        @include background(image-url("park5_rabbit.png"));
+        @include background-size(100% 100%);
+        position: absolute;
+        top: 15%;
+        left: 60%;
+        width: percentage(300 / $max-width);
+        padding-top: percentage(635 / $max-width);
+        @include opacity(0);
+        z-index: 3;
+        .cssanimations & {
+            @include opacity(1);
+        }
+    }
+    .background {
+        @include background(image-url("bg_park5_1.png") no-repeat);
+        @include background-size(100% auto);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
+    .bg-hole {
+        @include background(image-url("bg-hole.jpg") no-repeat);
+        @include background-size(100% auto);
+        position: absolute;
+        top: percentage(543 / $max-height);
+        left: percentage(996 / $max-width);
+        width: percentage(757 / $max-width);
+        padding-top: percentage(227 / $max-width);
+        z-index: 1;
+    }
+    &.in-view {
+        .bg-hole {
+            @include animation(hole-glow 0.35s steps(4) infinite alternate);
+        }
+        .rabbit {
+            @include animation(rabbit-down 3s forwards);
+        }
+    }
 }
 
 @include keyframes(rabbit-down) {
     100% {
-    	@include translate(0, 100%);
+        @include translate(0, 100%);
     }
 }
 
 #to-tunnels {
-	@extend %imgreplace;
-	overflow: visible;
-	position: absolute;
-	top: 34%; left: 53%;
-	width: 29%; height: 16%;
-	z-index: 5;
-	// After the user sees the hole, we want an arrow to appear and indicate the tunnels are interactable after a wait.
-	.in-view &.unactivated:after {
-		content: " ";
-		@include opacity(0);
-		@extend %imgreplace;
-		@include background(image-url("g_arrow.svg") no-repeat);
-		@include background-size(100% 100%);
-		@include animation(arrow-point 1.5s ease-out alternate infinite, arrow-fade 2s alternate infinite 3.5s);
-		@include rotate(-40deg);
-		position: absolute;
-		top: -70%; left: 80%;
-		width: 67%; padding-top: 21%;
-	}
-
+    span {
+        @extend %visuallyhidden;
+    }
+    @extend %imgreplace;
+    overflow: visible;
+    position: absolute;
+    top: 34%;
+    left: 53%;
+    width: 29%;
+    height: 16%;
+    z-index: 5;
+    // After the user sees the hole, we want an arrow to appear and indicate the tunnels are interactable after a wait.
+    .in-view &.unactivated:after {
+        content: " ";
+        @include opacity(0);
+        @extend %imgreplace;
+        @include background(image-url("g_arrow.svg") no-repeat);
+        @include background-size(100% 100%);
+        @include animation(
+            arrow-point 1.5s ease-out alternate infinite,
+            arrow-fade 2s alternate infinite 3.5s
+        );
+        @include rotate(-40deg);
+        position: absolute;
+        top: -70%;
+        left: 80%;
+        width: 67%;
+        padding-top: 21%;
+    }
 }
 
 @include keyframes(arrow-fade) {
-    50% { @include opacity(1); }
-    100% { @include opacity(0); }
+    50% {
+        @include opacity(1);
+    }
+    100% {
+        @include opacity(0);
+    }
 }
 
 @include keyframes(arrow-point) {
-    0% { @include simple-transform($scale: 1, $rotate: -40deg, $trans-x: 0, $trans-y: 0); }
-    100% { @include simple-transform($scale: .9, $rotate: -45deg, $trans-x: 10%, $trans-y: 10%); }
+    0% {
+        @include simple-transform(
+            $scale: 1,
+            $rotate: -40deg,
+            $trans-x: 0,
+            $trans-y: 0
+        );
+    }
+    100% {
+        @include simple-transform(
+            $scale: 0.9,
+            $rotate: -45deg,
+            $trans-x: 10%,
+            $trans-y: 10%
+        );
+    }
 }
 
 @include keyframes(hole-glow) {
-    0% { background-position: 0 0; }
-    100% { background-position: 0 133.333333%; }
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 133.333333%;
+    }
 }
