--- a/book/css/style.css
+++ b/book/css/style.css
@@ -406,14 +406,12 @@
   }
 
   .scene .page {
-    -moz-transform: scale3d(1, 1, 1);
-    -ms-transform: scale3d(1, 1, 1);
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
     /* padding-top: 75%; //maintain a 3 to 4 ratio  */
     aspect-ratio: 4/3;
+    margin: 0 auto;
     position: relative;
     z-index: 0;
+    max-height: 100vh;
     background-size: 100% auto;
     background-size: 100% auto;
     background-size: 100% auto;
