making it so clicking on the rabbit hold scrolls down with scroll-behavior: smooth

--- a/book/css/style.css
+++ b/book/css/style.css
@@ -878,8 +878,12 @@
       background-position: 0 133.333333%;
     }
   }
+  *,
+  html {
+    scroll-behavior: smooth !important;
+  }
+
   .scene-hole {
-    scroll-behavior: smooth;
     background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, #6c373f;
     background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, #6c373f;
     background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, #6c373f;
