--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -1,8 +1,10 @@
 $alice-fall: "alice-fall";
 @include animation-sequence-sprite-generator($alice-fall);
-
+*,
+html {
+    scroll-behavior: smooth !important;
+}
 .scene-hole {
-    scroll-behavior: smooth;
     @include background(
         image-url("bg-tunnel-border-left.svg") 0 0 repeat-y,
         image-url("bg-tunnel-border-right.svg") 100% 0 repeat-y,
