--- a/book/scss/scenes/_common.scss
+++ b/book/scss/scenes/_common.scss
@@ -11,13 +11,17 @@
 }
 
 // Common to All Pages
+.scene {
+    margin: 0 auto;
+    width: Min(100%, 133vh);
+}
+
 .scene .page {
     // .scene for specificity
     // @include transform(scale3d(1, 1, 1));
     @extend %imgreplace;
     /* padding-top: 75%; //maintain a 3 to 4 ratio  */
     aspect-ratio: 4/3;
-    margin: 0 auto;
     position: relative;
     z-index: 0;
     max-height: 100vh;
